@@ -20,7 +20,8 @@ module Avro
   module DataFile
     VERSION = 1
     MAGIC = "Obj" + [VERSION].pack('c')
-    MAGIC_SIZE = MAGIC.size
+    MAGIC.force_encoding('BINARY') if MAGIC.respond_to?(:force_encoding)
+    MAGIC_SIZE = MAGIC.respond_to?(:bytesize) ? MAGIC.bytesize : MAGIC.size
     SYNC_SIZE = 16
     SYNC_INTERVAL = 4000 * SYNC_SIZE
     META_SCHEMA = Schema.parse('{"type": "map", "values": "bytes"}')
@@ -98,6 +99,7 @@ module Avro
         @encoder = IO::BinaryEncoder.new(@writer)
         @datum_writer = datum_writer
         @buffer_writer = StringIO.new('', 'w')
+        @buffer_writer.set_encoding('BINARY') if @buffer_writer.respond_to?(:set_encoding)
         @buffer_encoder = IO::BinaryEncoder.new(@buffer_writer)
         @block_count = 0
 
@@ -181,7 +183,7 @@ module Avro
           # write number of items in block and block size in bytes
           encoder.write_long(block_count)
           to_write = codec.compress(buffer_writer.string)
-          encoder.write_long(to_write.size)
+          encoder.write_long(to_write.respond_to?(:bytesize) ? to_write.bytesize : to_write.size)
 
           # write block contents
           writer.write(to_write)
