@@ -107,6 +107,9 @@ Trunk (not yet released)
 
     AVRO-1525. Java: ReflectData cannot resolve union with fixed. (tomwhite)
 
+    AVRO-1499. Ruby: Fix encoding issue that caused corrupted data files
+    to be written under Ruby 2.0+. (Willem van Bergen and martinkl)
+
 Avro 1.7.6 (15 January 2014)
 
   NEW FEATURES
